文件管理已增加1.重命名，2.批量删除，3.文件预览，4.编辑保存。相关api和页面
